@@ -1,1 +1,2 @@
 DIST remmina-1.1.2.tar.gz 796691 SHA256 214eb82e616f3158304f689692d467b45c537e295e6aed1c6d291b2d7d2e601e SHA512 4f6a38ec99acdfe53343e7c72e773f71a505eaacca6c6b078a17496556df0827f15aa84af7a8903e8c12caad2fc9737d8414aa923605e06e30e4a7d2c67add48 WHIRLPOOL 3aa08e9f907e8067886ac92b52711d7f5bdbfbfbc4c6808d8c0cea02a119a706afa86b070188e0c7c5da48aacdead6b489ec5609166239fbb1f1d2f12fc64409
+DIST remmina-1.2.0_rc2.tar.gz 763034 SHA256 eae82de9db4d3e9e42480371b7d5d71213468ec8f9c0577065474e28e7592bcc SHA512 22f13795654d277931fdf9c598287ffb393775c9fd795e33a50c4bd7dc391256688d7125ac4305e65e15c736f9fe2653de9b0d584fb566998f92ac1ced84fbac WHIRLPOOL c953bdf4bea635c3c6e1563c804a6bb64b8d145574231f3325bd1b9b9079b338616ac4947edd1cb7fb085b3593db0111ba152133bebf5599e81799e4a97dc6e4
